--- a/src/com/rentacar/view/CompanyGUI.form
+++ b/src/com/rentacar/view/CompanyGUI.form
@@ -199,7 +199,7 @@
                   <text value="Direk Kiraya Çıkar"/>
                 </properties>
               </component>
-              <component id="17650" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="17650" class="javax.swing.JComboBox" binding="cmbBx_isRental">
                 <constraints>
                   <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
