--- a/src/com/rentacar/view/CustomerGUI.form
+++ b/src/com/rentacar/view/CustomerGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="wrapper" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="865" height="635"/>
+      <xy x="20" y="20" width="865" height="755"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -74,7 +74,7 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="ec633" binding="pnl_side" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="ec633" binding="pnl_side" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -144,7 +144,7 @@
                           <text value="Tarih Aralığı"/>
                         </properties>
                       </component>
-                      <component id="511a" class="javax.swing.JTextField" binding="a20220601TextField" default-binding="true">
+                      <component id="511a" class="javax.swing.JTextField" binding="txtFld_fistDateSearch">
                         <constraints>
                           <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -154,7 +154,7 @@
                           <text value="2022-06-01"/>
                         </properties>
                       </component>
-                      <component id="8ef8e" class="javax.swing.JTextField" binding="a20220626TextField" default-binding="true">
+                      <component id="8ef8e" class="javax.swing.JTextField" binding="txtFld_lastDateSearch">
                         <constraints>
                           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -212,28 +212,21 @@
                       </component>
                     </children>
                   </grid>
-                  <component id="2e6d" class="javax.swing.JButton" binding="rezerveEtButton" default-binding="true">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Rezerve Et"/>
-                    </properties>
-                  </component>
                   <vspacer id="da42c">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <component id="c426a" class="javax.swing.JTextField" binding="araçTextField" default-binding="true">
+                  <component id="c426a" class="javax.swing.JTextField" binding="txtFld_carID">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
+                      <editable value="false"/>
                       <enabled value="false"/>
-                      <text value="Araç"/>
+                      <text value="0"/>
                     </properties>
                   </component>
                   <component id="243e5" class="javax.swing.JLabel">
@@ -241,7 +234,51 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value=""/>
+                      <text value="                  "/>
+                    </properties>
+                  </component>
+                  <component id="68ff9" class="javax.swing.JTextField" binding="txtFld_firstDate">
+                    <constraints>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="2022-07-18"/>
+                    </properties>
+                  </component>
+                  <component id="388fb" class="javax.swing.JTextField" binding="txtFld_lastDate">
+                    <constraints>
+                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="2022-07-23"/>
+                    </properties>
+                  </component>
+                  <component id="eaa99" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Tarih Aralığı"/>
+                    </properties>
+                  </component>
+                  <component id="c08ad" class="javax.swing.JButton" binding="btn_reserveMake">
+                    <constraints>
+                      <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Rezerve Et"/>
+                    </properties>
+                  </component>
+                  <component id="98b3f" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Araç ID"/>
                     </properties>
                   </component>
                 </children>
