--- a/src/com/rentacar/view/CompanyGUI.form
+++ b/src/com/rentacar/view/CompanyGUI.form
@@ -182,13 +182,7 @@
                   <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <model>
-                    <item value="34"/>
-                    <item value="52"/>
-                    <item value="61"/>
-                    <item value="06"/>
-                    <item value="35"/>
-                  </model>
+                  <model/>
                 </properties>
               </component>
               <component id="1c1a2" class="javax.swing.JLabel">
