--- a/src/com/rentacar/view/RegisterCompanyGUI.form
+++ b/src/com/rentacar/view/RegisterCompanyGUI.form
@@ -116,12 +116,7 @@
               <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <model>
-                <item value="34"/>
-                <item value="35"/>
-                <item value="06"/>
-                <item value="61"/>
-              </model>
+              <model/>
             </properties>
           </component>
           <component id="101ba" class="javax.swing.JButton" binding="btn_register">
