--- a/src/com/rentacar/view/CustomerGUI.form
+++ b/src/com/rentacar/view/CustomerGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="wrapper" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="865" height="755"/>
+      <xy x="20" y="20" width="865" height="759"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -25,14 +25,6 @@
               <text value="Müşteri"/>
             </properties>
           </component>
-          <component id="5adc" class="javax.swing.JButton" binding="btn_exit">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Çıkış"/>
-            </properties>
-          </component>
           <component id="d95ee" class="javax.swing.JLabel" binding="lbl_uname">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -42,6 +34,29 @@
               <text value="Kullanııcı Adı"/>
             </properties>
           </component>
+          <grid id="72251" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="5adc" class="javax.swing.JButton" binding="btn_exit">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Çıkış"/>
+                </properties>
+              </component>
+              <hspacer id="1f778">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+            </children>
+          </grid>
         </children>
       </grid>
       <tabbedpane id="2044c" binding="tbbdPn_customer">
@@ -300,7 +315,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="4717c" class="javax.swing.JTable" binding="tbl_reserveCars">
+                  <component id="4717c" class="javax.swing.JTable" binding="tbl_reservedCars">
                     <constraints/>
                     <properties/>
                   </component>
